css/main.css
/* ... */
.edit-profile img,
.edit-product img {
	max-width: 200px;
	height: auto;
}

.edit-profile figcaption,
.edit-product figcaption {
	text-align: center;
	margin-left: 4em;
}

@media screen and (max-width: 768px) {
	.edit-product figcaption {
		margin: 0;
	}
}

@media screen and (min-width: 768px) {
  .inline-list {
    padding: inherit;
  }

  .inline-list li {
    margin-left: 30px;
  }
}

.inline-list li:first-child {
  margin-left: 0;
}

#outputArea {
  margin: 0 !important;
  /*padding: 1em;*/
  border-radius: 3px;
  margin-top: 10px;
}
@media screen and (min-width: 768px) {
	.alert-message {
		width: 60%;
		margin-left: 16em;
		margin-bottom: 160px;
		margin-top: -10px;
	}
}

a:hover {
  text-decoration: none !important;
}

#farm-to-you-logo a {
	font-size: 1em;
	font-family: Zebrazil, serif;

}

@media screen and (min-width: 768px) {
  #farm-to-you-logo a {
    font-size: 2em;
  }
}

#farm-to-you-logo a:hover {
  text-decoration: none;
  border: none;
}

#farm-to-you-logo a,
#farm-to-you-logo a:hover {
  color: rgb(115, 90, 41);
}

.delete-item {
  font-size: 1.2em;
	position: relative;
	top: 3px;
}

@media screen and (min-width: 768px) {
	.delete-item {
		font-size: 2em;
		position: static;
	}
}

/********************************************
* forms
********************************************/
@media screen and (min-width: 768px) {
	.option-menu {
		margin-left: 196px;
	}
}

.sign-up-form,
.signIn-form,
.activation-form ,
.sign-out-form {
	background-color: rgba(255, 255, 255, 0.8);
	margin: auto;
	width: 70%;
	margin-top: 12%;
	position: relative;
	color: rgba(115, 90, 41, 0.8);
	font-size: 1em;
	border: 1px rgb(51, 40, 18);
	border-radius: 12px;
	padding: 1em;
	text-align: center;
}

form {
	margin-bottom: 10px;
}

form label {
	min-width: 100%;
}

form input[type=file] {
	margin-left: 13px;
	display: inherit;
}

@media screen and (max-width: 768px) {
	form input[type=file] {
		margin: 0;
	}
}

	form input[type=text],
form input[type=password]{
	margin-left: 0;
	/*width: 100%;*/
}

.user-account input[type=radio] {
	margin-left: 0;
}

.user-account .input-tag {
	width: 120px;
}

@media screen and (max-width: 768px) {
	.sign-up-form,
	.signIn-form {
		padding: 0;
	}
}

@media screen and (min-width: 768px) {
	form label {
		min-width: 180px;
		text-align: right;
	}

	.user-account textarea,
	.user-account input[type=text],
	.user-account textarea,
	#edit-product.user-account textarea,
	#add-product.user-account textarea,
	.user-account input[type=password],
	.user-account input[type=number] {
		margin-left: 1em;
		width: 50%;
		max-width: 50%; /* for the resize of the text area */
	}

	.user-account .input-tag {
		width: 100px !important;
	}

	.user-account input[type=radio] {
		margin-left: 1em !important;
	}

	.sign-up-form input[type=text],
	.sign-up-form input[type=password],
	.signIn-form input[type=text],
	.signIn-form input[type=password] {
		margin-left: 1em;
		min-width: 60%;
	}

	.sign-up-form #submit,
	.signIn-form #submit {
		width: 40%;
		margin-left: 1.1em;
	}

	.user-account [type=submit] {
		width: 50%;
		margin-left: 197px;
	}
}

.form-control-custom {
	height: 34px;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.42857;
	color: #555;
	background-color: #FFF;
	background-image: none;
	border: 1px solid #CCC;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
}
.transparent-form {
  background-color: rgb(255, 255, 255);
  text-align: center;
  margin-top: 4%;
  margin-bottom: 2%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-size: .8em;
  border: 1px rgb(51, 40, 18);
  border-radius: 5px;
  padding: 2em;
}

@media screen and (min-width: 768px) {
	.transparent-form {
		text-align: inherit;
		font-size: 1em;
		border-radius: 12px;
		margin-top: 4%;
  }
}
.nav-stacked.active {
  color: rgba(115, 90, 41, 0.8);
}
  .transparent-menu {
  background-color: rgba(255, 255, 255, .8);
  text-align: left;
  margin: auto;
  width: 20%;
  margin-top: 10%;
  margin-bottom: 10%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko, sans-serif;
  font-size: .7em;
    border: 1px rgb(51, 40, 18);
  border-radius: 3px;
}

@media screen and (min-width: 768px) {
  .transparent-menu {
    background-color: rgba(255, 255, 255, .8);
    text-align: left;
    margin: auto;
    width: 20%;
    margin-top: 10%;
    margin-bottom: 10%;
    position: relative;
    color: rgba(115, 90, 41, 0.8);
    font-family: Biko, sans-serif;
    font-size: 1em;
    border: 1px rgb(51, 40, 18);
    border-radius: 5px;
  }

}
input[type=text],
input[type=password],
input[type=tel],
input[type=file], {
  padding: 0.3em;
  padding-left: 1em;
  border: 2px rgb(51, 40, 18);
  border-radius: 12px;
  background-color: rgba(255, 255, 255, 0.8);
  text-align: center;
  margin: auto;
  width: 70%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko, sans-serif;
  font-size: 1em;
}

#search .search-field,
#search [type=submit] {
	padding: 3px 6px;
}

@media screen and (min-width: 768px) {
	.search-message {
		margin-left: 300px;
	}
}

@media screen and (max-width: 768px) {
	#search .search-field-splash {
		margin-top: 12em;
		padding: 6px;
		margin-left: .5em;
		margin-right: 1em;
	}
	.search-field-button {
		margin-top: 12em;
		margin-left: -1em;
	}
}


	input[type=text]:focus,
input[type=password]:focus {
  outline: none;
}

#main-search input[type=text],
#main-search button {
  width: 100%;
}

#main-search button {
  width: 30px;
  height: 30px;
  padding: 0;
}

.xs-input {
  width: 60px;
}

.form-group,
.form-row {
  margin-top: 20px;
}

.form-row:not(.center) {
  margin-left: 1em;
}
/* ... */

